@@ -826,16 +826,21 @@ callSurelyWrites (const lineNode *pl, const char *what)
 
   const bool *preserved_regs;
 
+  if (f && (strlen(what) == 2 && what[1] == 'f')) // Flags are never preserved across function calls.
+    return(true);
+
   if(!strcmp(what, "ix"))
     return(false);
 
   if(f)
     preserved_regs = f->type->funcAttrs.preserved_regs;
-  else if (ISINST(pl->line, "call")) // Err on the safe side.
+  else if (ISINST(pl->line, "call"))
     preserved_regs = z80_regs_preserved_in_calls_from_current_function;
-  else
+  else // Err on the safe side for jp and jr - might not be a function call, might e.g. be a jump table.
     return (false);
 
+  if (!strcmp (what, "a"))
+    return !preserved_regs[A_IDX];
   if (!strcmp (what, "c"))
     return !preserved_regs[C_IDX];
   if (!strcmp (what, "b"))
@@ -1004,11 +1009,11 @@ scan4op (lineNode **pl, const char *what, const char *untilOp,
 
       if(isFlag)
         {
-        if(z80MightReadFlag(*pl, what))
-          {
-            D(("S4O_RD_OP (flag)\n"));
-            return S4O_RD_OP;
-          }
+          if(z80MightReadFlag(*pl, what))
+            {
+              D(("S4O_RD_OP (flag)\n"));
+              return S4O_RD_OP;
+            }
         }
       else
         {
