@@ -1,3 +1,8 @@
+2024-04-18 Philipp Klaus Krause <philipp@colecovision.eu>
+
+	* src/z80/peep.c:
+	  Improve handling of function calls in notUsed(From).
+
 2024-04-17 Philipp Klaus Krause <philipp@colecovision.eu>
 
 	* support/regression/tests/discussion-1854.c,
